lustre/obdclass/llog_osd.c
@@ -1235,7 +1235,7 @@ static struct dt_object *llog_osd_dir_get(const struct lu_env *env,
 			return ERR_PTR(rc);
 		dir = dt_locate(env, dt, &dti->dti_fid);
 
-		if (!IS_ERR(dir) && !dt_try_as_dir(env, dir, true)) {
+		if (!IS_ERR(dir) && !dt_try_as_dir(env, dir, false)) {
 			dt_object_put(env, dir);
 			return ERR_PTR(-ENOTDIR);
 		}
@@ -1442,7 +1442,7 @@ static struct dt_object *llog_osd_get_regular_fid_dir(const struct lu_env *env,
 	if (IS_ERR(dir))
 		RETURN(dir);
 
-	if (!dt_try_as_dir(env, dir, true)) {
+	if (!dt_try_as_dir(env, dir, false)) {
 		dt_object_put(env, dir);
 		RETURN(ERR_PTR(-ENOTDIR));
 	}
